drm/amdgpu: enable GFX IP v11.5.0 CG and PG support (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14120,6 +14120,7 @@
 	patches.suse/1109-drm-amdgpu-add-support-to-powerup-VPE-by-SMU.patch
 	patches.suse/1110-drm-amdgpu-add-power-up-down-UMSCH-ppt-callback.patch
 	patches.suse/1111-drm-amdgpu-add-support-to-power-up-down-UMSCH-by-SMU.patch
+	patches.suse/1112-drm-amdgpu-enable-GFX-IP-v11.5.0-CG-and-PG-support.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
