--- a/series.conf
+++ b/series.conf
@@ -14121,6 +14121,7 @@
 	patches.suse/1110-drm-amdgpu-add-power-up-down-UMSCH-ppt-callback.patch
 	patches.suse/1111-drm-amdgpu-add-support-to-power-up-down-UMSCH-by-SMU.patch
 	patches.suse/1112-drm-amdgpu-enable-GFX-IP-v11.5.0-CG-and-PG-support.patch
+	patches.suse/1113-drm-amd-Evict-resources-during-PM-ops-prepare-callba.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
