--- a/series.conf
+++ b/series.conf
@@ -14125,6 +14125,7 @@
 	patches.suse/1114-drm-amd-Add-concept-of-running-prepare_suspend-seque.patch
 	patches.suse/1115-drm-amd-Split-up-UVD-suspend-into-prepare-and-suspen.patch
 	patches.suse/1116-drm-amd-display-Catch-errors-from-drm_atomic_helper_.patch
+	patches.suse/1117-drm-amd-display-Destroy-DC-context-while-keeping-DML.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
