--- a/series.conf
+++ b/series.conf
@@ -14129,6 +14129,7 @@
 	patches.suse/1118-drm-amd-display-make-dc_set_power_state-return-type-.patch
 	patches.suse/1119-drm-amdgpu-umsch-enable-doorbell-for-umsch.patch
 	patches.suse/1120-drm-amd-display-add-missing-NULL-check-for-DML2.patch
+	patches.suse/1121-drm-amdgpu-Read-PSPv13-OS-version-from-register.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
