drm/amd/display: Revert "drm/amd/display: Use drm_connector in (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14131,6 +14131,7 @@
 	patches.suse/1120-drm-amd-display-add-missing-NULL-check-for-DML2.patch
 	patches.suse/1121-drm-amdgpu-Read-PSPv13-OS-version-from-register.patch
 	patches.suse/1122-drm-amdgpu-Expose-ras-version-schema-info.patch
+	patches.suse/1123-drm-amd-display-Revert-drm-amd-display-Use-drm_conne.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
