--- a/series.conf
+++ b/series.conf
@@ -14133,6 +14133,7 @@
 	patches.suse/1122-drm-amdgpu-Expose-ras-version-schema-info.patch
 	patches.suse/1123-drm-amd-display-Revert-drm-amd-display-Use-drm_conne.patch
 	patches.suse/1124-Revert-drm-amd-display-Disable-DWB-frame-capture-to-.patch
+	patches.suse/1125-Revert-drm-amd-display-Add-new-set_fc_enable-to-stru.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
