--- a/series.conf
+++ b/series.conf
@@ -14134,6 +14134,7 @@
 	patches.suse/1123-drm-amd-display-Revert-drm-amd-display-Use-drm_conne.patch
 	patches.suse/1124-Revert-drm-amd-display-Disable-DWB-frame-capture-to-.patch
 	patches.suse/1125-Revert-drm-amd-display-Add-new-set_fc_enable-to-stru.patch
+	patches.suse/1126-Revert-drm-amd-display-Setup-for-mmhubbub3_warmup_mc.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
