Revert "drm/amd/display: Add writeback enable field (wb_enabled)" (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14135,6 +14135,7 @@
 	patches.suse/1124-Revert-drm-amd-display-Disable-DWB-frame-capture-to-.patch
 	patches.suse/1125-Revert-drm-amd-display-Add-new-set_fc_enable-to-stru.patch
 	patches.suse/1126-Revert-drm-amd-display-Setup-for-mmhubbub3_warmup_mc.patch
+	patches.suse/1127-Revert-drm-amd-display-Add-writeback-enable-field-wb.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
