--- a/series.conf
+++ b/series.conf
@@ -14137,6 +14137,7 @@
 	patches.suse/1126-Revert-drm-amd-display-Setup-for-mmhubbub3_warmup_mc.patch
 	patches.suse/1127-Revert-drm-amd-display-Add-writeback-enable-field-wb.patch
 	patches.suse/1128-Revert-drm-amd-display-Fix-writeback_info-is-not-rem.patch
+	patches.suse/1129-Revert-drm-amd-display-Validate-hw_points_num-before.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
