Revert "drm/amd/display: Hande writeback request from userspace" (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14140,6 +14140,7 @@
 	patches.suse/1129-Revert-drm-amd-display-Validate-hw_points_num-before.patch
 	patches.suse/1130-Revert-drm-amd-display-Fix-writeback_info-never-got-.patch
 	patches.suse/1131-Revert-drm-amd-display-Add-writeback-enable-disable-.patch
+	patches.suse/1132-Revert-drm-amd-display-Hande-writeback-request-from-.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
