--- a/series.conf
+++ b/series.conf
@@ -14141,6 +14141,7 @@
 	patches.suse/1130-Revert-drm-amd-display-Fix-writeback_info-never-got-.patch
 	patches.suse/1131-Revert-drm-amd-display-Add-writeback-enable-disable-.patch
 	patches.suse/1132-Revert-drm-amd-display-Hande-writeback-request-from-.patch
+	patches.suse/1133-Revert-drm-amd-display-Create-fake-sink-and-stream-f.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
