--- a/series.conf
+++ b/series.conf
@@ -14143,6 +14143,7 @@
 	patches.suse/1132-Revert-drm-amd-display-Hande-writeback-request-from-.patch
 	patches.suse/1133-Revert-drm-amd-display-Create-fake-sink-and-stream-f.patch
 	patches.suse/1134-Revert-drm-amd-display-Create-amdgpu_dm_wb_connector.patch
+	patches.suse/1135-drm-amd-pm-Add-reset-option-for-fan_ctrl-interfaces.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
