drm/amd/pm: Add reset option for fan_ctrl on smu 13.0.7 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14144,6 +14144,7 @@
 	patches.suse/1133-Revert-drm-amd-display-Create-fake-sink-and-stream-f.patch
 	patches.suse/1134-Revert-drm-amd-display-Create-amdgpu_dm_wb_connector.patch
 	patches.suse/1135-drm-amd-pm-Add-reset-option-for-fan_ctrl-interfaces.patch
+	patches.suse/1136-drm-amd-pm-Add-reset-option-for-fan_ctrl-on-smu-13.0.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
