--- a/series.conf
+++ b/series.conf
@@ -14147,6 +14147,7 @@
 	patches.suse/1136-drm-amd-pm-Add-reset-option-for-fan_ctrl-on-smu-13.0.patch
 	patches.suse/1137-drm-amd-pm-drop-most-smu_cmn_get_smc_version-in-smu.patch
 	patches.suse/1138-Revert-drm-amd-display-Use-drm_connector-in-create_s.patch
+	patches.suse/1139-Revert-drm-amd-display-Return-drm_connector-from-fin.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
