Revert "drm/amd/display: Skip writeback connector when we get (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14148,6 +14148,7 @@
 	patches.suse/1137-drm-amd-pm-drop-most-smu_cmn_get_smc_version-in-smu.patch
 	patches.suse/1138-Revert-drm-amd-display-Use-drm_connector-in-create_s.patch
 	patches.suse/1139-Revert-drm-amd-display-Return-drm_connector-from-fin.patch
+	patches.suse/1140-Revert-drm-amd-display-Skip-writeback-connector-when.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
