--- a/series.conf
+++ b/series.conf
@@ -14150,6 +14150,7 @@
 	patches.suse/1139-Revert-drm-amd-display-Return-drm_connector-from-fin.patch
 	patches.suse/1140-Revert-drm-amd-display-Skip-writeback-connector-when.patch
 	patches.suse/1141-Revert-drm-amd-display-Initialize-writeback-connecto.patch
+	patches.suse/1142-Revert-drm-amd-display-Disable-virtual-links.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
