Revert "drm/amd/display: Create one virtual connector in DC" (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14151,6 +14151,7 @@
 	patches.suse/1140-Revert-drm-amd-display-Skip-writeback-connector-when.patch
 	patches.suse/1141-Revert-drm-amd-display-Initialize-writeback-connecto.patch
 	patches.suse/1142-Revert-drm-amd-display-Disable-virtual-links.patch
+	patches.suse/1143-Revert-drm-amd-display-Create-one-virtual-connector-.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
