--- a/series.conf
+++ b/series.conf
@@ -14153,6 +14153,7 @@
 	patches.suse/1142-Revert-drm-amd-display-Disable-virtual-links.patch
 	patches.suse/1143-Revert-drm-amd-display-Create-one-virtual-connector-.patch
 	patches.suse/1144-Revert-drm-amd-display-Skip-entire-amdgpu_dm-build-i.patch
+	patches.suse/1145-drm-amdgpu-save-VCN-instances-init-info-before-jpeg-.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
