drm/amdgpu: Add support to load P2S tables (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14156,6 +14156,7 @@
 	patches.suse/1145-drm-amdgpu-save-VCN-instances-init-info-before-jpeg-.patch
 	patches.suse/1146-drm-amdgpu-Avoid-FRU-EEPROM-access-on-APU.patch
 	patches.suse/1147-drm-amdgpu-Update-PSP-interface-header.patch
+	patches.suse/1148-drm-amdgpu-Add-support-to-load-P2S-tables.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
