--- a/series.conf
+++ b/series.conf
@@ -14157,6 +14157,7 @@
 	patches.suse/1146-drm-amdgpu-Avoid-FRU-EEPROM-access-on-APU.patch
 	patches.suse/1147-drm-amdgpu-Update-PSP-interface-header.patch
 	patches.suse/1148-drm-amdgpu-Add-support-to-load-P2S-tables.patch
+	patches.suse/1149-drm-amd-pm-Add-P2S-tables-for-SMU-v13.0.6.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
