drm/amdgpu: correct NBIO v7.11 programing (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14160,6 +14160,7 @@
 	patches.suse/1149-drm-amd-pm-Add-P2S-tables-for-SMU-v13.0.6.patch
 	patches.suse/1150-drm-amdgpu-Correctly-use-bo_va-ref_count-in-compute-.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
+	patches.suse/1152-drm-amdgpu-correct-NBIO-v7.11-programing.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
