drm/amdgpu/umsch: fix missing stuff during rebase (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14163,6 +14163,7 @@
 	patches.suse/1152-drm-amdgpu-correct-NBIO-v7.11-programing.patch
 	patches.suse/1153-drm-amdgpu-don-t-use-legacy-invalidation-on-MMHUB-v3.patch
 	patches.suse/1154-drm-amdgpu-umsch-correct-IP-version-format.patch
+	patches.suse/1155-drm-amdgpu-umsch-fix-missing-stuff-during-rebase.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
