--- a/series.conf
+++ b/series.conf
@@ -14164,6 +14164,7 @@
 	patches.suse/1153-drm-amdgpu-don-t-use-legacy-invalidation-on-MMHUB-v3.patch
 	patches.suse/1154-drm-amdgpu-umsch-correct-IP-version-format.patch
 	patches.suse/1155-drm-amdgpu-umsch-fix-missing-stuff-during-rebase.patch
+	patches.suse/1156-drm-amdgpu-disable-GFXOFF-and-PG-during-compute-for-.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
