drm/amdgpu: flush the correct vmid tlb for specific pasid (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14166,6 +14166,7 @@
 	patches.suse/1155-drm-amdgpu-umsch-fix-missing-stuff-during-rebase.patch
 	patches.suse/1156-drm-amdgpu-disable-GFXOFF-and-PG-during-compute-for-.patch
 	patches.suse/1157-drm-amdgpu-make-err_data-structure-built-in-for-ras_.patch
+	patches.suse/1158-drm-amdgpu-flush-the-correct-vmid-tlb-for-specific-p.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
