--- a/series.conf
+++ b/series.conf
@@ -14167,6 +14167,7 @@
 	patches.suse/1156-drm-amdgpu-disable-GFXOFF-and-PG-during-compute-for-.patch
 	patches.suse/1157-drm-amdgpu-make-err_data-structure-built-in-for-ras_.patch
 	patches.suse/1158-drm-amdgpu-flush-the-correct-vmid-tlb-for-specific-p.patch
+	patches.suse/1159-drm-amdgpu-add-ras_err_info-to-identify-RAS-error-so.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
