drm/amdgpu: add RAS error info support for gfx_v9_4_3 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14169,6 +14169,7 @@
 	patches.suse/1158-drm-amdgpu-flush-the-correct-vmid-tlb-for-specific-p.patch
 	patches.suse/1159-drm-amdgpu-add-ras_err_info-to-identify-RAS-error-so.patch
 	patches.suse/1160-drm-amdgpu-add-RAS-error-info-support-for-sdma_v4_4_.patch
+	patches.suse/1161-drm-amdgpu-add-RAS-error-info-support-for-gfx_v9_4_3.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
