--- a/series.conf
+++ b/series.conf
@@ -14170,6 +14170,7 @@
 	patches.suse/1159-drm-amdgpu-add-ras_err_info-to-identify-RAS-error-so.patch
 	patches.suse/1160-drm-amdgpu-add-RAS-error-info-support-for-sdma_v4_4_.patch
 	patches.suse/1161-drm-amdgpu-add-RAS-error-info-support-for-gfx_v9_4_3.patch
+	patches.suse/1162-drm-amdgpu-add-RAS-error-info-support-for-mmhub_v1_8.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
