--- a/series.conf
+++ b/series.conf
@@ -14172,6 +14172,7 @@
 	patches.suse/1161-drm-amdgpu-add-RAS-error-info-support-for-gfx_v9_4_3.patch
 	patches.suse/1162-drm-amdgpu-add-RAS-error-info-support-for-mmhub_v1_8.patch
 	patches.suse/1163-drm-amdgpu-add-RAS-error-info-support-for-umc_v12_0.patch
+	patches.suse/1164-drm-amd-swsmu-update-smu-v14_0_0-header-files-and-me.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
