--- a/series.conf
+++ b/series.conf
@@ -14174,6 +14174,7 @@
 	patches.suse/1163-drm-amdgpu-add-RAS-error-info-support-for-umc_v12_0.patch
 	patches.suse/1164-drm-amd-swsmu-update-smu-v14_0_0-header-files-and-me.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
+	patches.suse/1166-drm-i915-Add-new-DG2-PCI-IDs.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
