--- a/series.conf
+++ b/series.conf
@@ -14175,6 +14175,7 @@
 	patches.suse/1164-drm-amd-swsmu-update-smu-v14_0_0-header-files-and-me.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/1166-drm-i915-Add-new-DG2-PCI-IDs.patch
+	patches.suse/1167-drm-i915-lnl-Remove-watchdog-timers-for-PSR.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
