drm/i915/dsb: Re-instate DSB for LUT updates (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14178,6 +14178,7 @@
 	patches.suse/1167-drm-i915-lnl-Remove-watchdog-timers-for-PSR.patch
 	patches.suse/1168-drm-i915-dsb-Allocate-command-buffer-from-local-memo.patch
 	patches.suse/1169-drm-i915-dsb-Correct-DSB-command-buffer-cache-cohere.patch
+	patches.suse/1170-drm-i915-dsb-Re-instate-DSB-for-LUT-updates.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
