--- a/series.conf
+++ b/series.conf
@@ -14179,6 +14179,7 @@
 	patches.suse/1168-drm-i915-dsb-Allocate-command-buffer-from-local-memo.patch
 	patches.suse/1169-drm-i915-dsb-Correct-DSB-command-buffer-cache-cohere.patch
 	patches.suse/1170-drm-i915-dsb-Re-instate-DSB-for-LUT-updates.patch
+	patches.suse/1171-drm-i915-dp-Sanitize-DPCD-revision-check-in-intel_dp.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
