drm/i915/dp: Store DSC DPCD capabilities in the connector (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14180,6 +14180,7 @@
 	patches.suse/1169-drm-i915-dsb-Correct-DSB-command-buffer-cache-cohere.patch
 	patches.suse/1170-drm-i915-dsb-Re-instate-DSB-for-LUT-updates.patch
 	patches.suse/1171-drm-i915-dp-Sanitize-DPCD-revision-check-in-intel_dp.patch
+	patches.suse/1172-drm-i915-dp-Store-DSC-DPCD-capabilities-in-the-conne.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
