--- a/series.conf
+++ b/series.conf
@@ -14181,6 +14181,7 @@
 	patches.suse/1170-drm-i915-dsb-Re-instate-DSB-for-LUT-updates.patch
 	patches.suse/1171-drm-i915-dp-Sanitize-DPCD-revision-check-in-intel_dp.patch
 	patches.suse/1172-drm-i915-dp-Store-DSC-DPCD-capabilities-in-the-conne.patch
+	patches.suse/1173-drm-i915-dp_mst-Set-connector-DSC-capabilities-and-d.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
