drm/i915/dp: Use i915/intel connector local variables in (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14182,6 +14182,7 @@
 	patches.suse/1171-drm-i915-dp-Sanitize-DPCD-revision-check-in-intel_dp.patch
 	patches.suse/1172-drm-i915-dp-Store-DSC-DPCD-capabilities-in-the-conne.patch
 	patches.suse/1173-drm-i915-dp_mst-Set-connector-DSC-capabilities-and-d.patch
+	patches.suse/1174-drm-i915-dp-Use-i915-intel-connector-local-variables.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
