--- a/series.conf
+++ b/series.conf
@@ -14185,6 +14185,7 @@
 	patches.suse/1174-drm-i915-dp-Use-i915-intel-connector-local-variables.patch
 	patches.suse/1175-drm-i915-dp-Use-connector-DSC-DPCD-in-i915_dsc_fec_s.patch
 	patches.suse/1176-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_c.patch
+	patches.suse/1177-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_suppo.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
