--- a/series.conf
+++ b/series.conf
@@ -14188,6 +14188,7 @@
 	patches.suse/1177-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_suppo.patch
 	patches.suse/1178-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_suppo.patch
 	patches.suse/1179-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_m.patch
+	patches.suse/1180-drm-i915-dp-Pass-connector-DSC-DPCD-to-drm_dp_dsc_si.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
