drm/i915/dp: Use connector DSC DPCD in intel_dp_dsc_supports_format() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14192,6 +14192,7 @@
 	patches.suse/1181-drm-i915-dp-Pass-only-the-required-i915-to-intel_dp_.patch
 	patches.suse/1182-drm-i915-dp-Pass-only-the-required-DSC-DPCD-to-intel.patch
 	patches.suse/1183-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_c.patch
+	patches.suse/1184-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_s.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
