--- a/series.conf
+++ b/series.conf
@@ -14193,6 +14193,7 @@
 	patches.suse/1182-drm-i915-dp-Pass-only-the-required-DSC-DPCD-to-intel.patch
 	patches.suse/1183-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_c.patch
 	patches.suse/1184-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_s.patch
+	patches.suse/1185-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_g.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
