drm/i915/dp_mst: Use connector DSC DPCD in (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14196,6 +14196,7 @@
 	patches.suse/1185-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_g.patch
 	patches.suse/1186-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_mode_.patch
 	patches.suse/1187-drm-i915-dp-Use-connector-DSC-DPCD-in-intel_dp_dsc_c.patch
+	patches.suse/1188-drm-i915-dp_mst-Use-connector-DSC-DPCD-in-intel_dp_m.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
