drm/i915/hdcp: Clean up zero initializers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14199,6 +14199,7 @@
 	patches.suse/1188-drm-i915-dp_mst-Use-connector-DSC-DPCD-in-intel_dp_m.patch
 	patches.suse/1189-drm-i915-dp-Remove-unused-DSC-caps-from-intel_dp.patch
 	patches.suse/1190-drm-i915-display-Clean-up-zero-initializers.patch
+	patches.suse/1191-drm-i915-hdcp-Clean-up-zero-initializers.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
