--- a/series.conf
+++ b/series.conf
@@ -14200,6 +14200,7 @@
 	patches.suse/1189-drm-i915-dp-Remove-unused-DSC-caps-from-intel_dp.patch
 	patches.suse/1190-drm-i915-display-Clean-up-zero-initializers.patch
 	patches.suse/1191-drm-i915-hdcp-Clean-up-zero-initializers.patch
+	patches.suse/1192-drm-i915-pci-Clean-up-zero-initializers.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
