--- a/series.conf
+++ b/series.conf
@@ -14201,6 +14201,7 @@
 	patches.suse/1190-drm-i915-display-Clean-up-zero-initializers.patch
 	patches.suse/1191-drm-i915-hdcp-Clean-up-zero-initializers.patch
 	patches.suse/1192-drm-i915-pci-Clean-up-zero-initializers.patch
+	patches.suse/1193-drm-i915-mtl-Remove-the-force_probe-requirement-for-.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
