drm/i915/guc: Clean up zero initializers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14202,6 +14202,7 @@
 	patches.suse/1191-drm-i915-hdcp-Clean-up-zero-initializers.patch
 	patches.suse/1192-drm-i915-pci-Clean-up-zero-initializers.patch
 	patches.suse/1193-drm-i915-mtl-Remove-the-force_probe-requirement-for-.patch
+	patches.suse/1194-drm-i915-guc-Clean-up-zero-initializers.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
