--- a/series.conf
+++ b/series.conf
@@ -14204,6 +14204,7 @@
 	patches.suse/1193-drm-i915-mtl-Remove-the-force_probe-requirement-for-.patch
 	patches.suse/1194-drm-i915-guc-Clean-up-zero-initializers.patch
 	patches.suse/1195-drm-i915-pxp-Clean-up-zero-initializers.patch
+	patches.suse/1196-drm-i915-Add-GuC-TLB-Invalidation-device-info-flags.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
