drm/i915/guc: Add CT size delay helper (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14205,6 +14205,7 @@
 	patches.suse/1194-drm-i915-guc-Clean-up-zero-initializers.patch
 	patches.suse/1195-drm-i915-pxp-Clean-up-zero-initializers.patch
 	patches.suse/1196-drm-i915-Add-GuC-TLB-Invalidation-device-info-flags.patch
+	patches.suse/1197-drm-i915-guc-Add-CT-size-delay-helper.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
