--- a/series.conf
+++ b/series.conf
@@ -14208,6 +14208,7 @@
 	patches.suse/1197-drm-i915-guc-Add-CT-size-delay-helper.patch
 	patches.suse/1198-drm-i915-Define-and-use-GuC-and-CTB-TLB-invalidation.patch
 	patches.suse/1199-drm-i915-No-TLB-invalidation-on-suspended-GT.patch
+	patches.suse/1200-drm-i915-No-TLB-invalidation-on-wedged-GT.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
