drm/i915/mtl: Don't set PIPE_CONTROL_FLUSH_L3 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14212,6 +14212,7 @@
 	patches.suse/1201-drm-i915-gt-Increase-sleep-in-gt_tlb-selftest-sanity.patch
 	patches.suse/1202-drm-i915-Enable-GuC-TLB-invalidations-for-MTL.patch
 	patches.suse/1203-drm-i915-Prevent-potential-null-ptr-deref-in-engine_.patch
+	patches.suse/1204-drm-i915-mtl-Don-t-set-PIPE_CONTROL_FLUSH_L3.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
