--- a/series.conf
+++ b/series.conf
@@ -14213,6 +14213,7 @@
 	patches.suse/1202-drm-i915-Enable-GuC-TLB-invalidations-for-MTL.patch
 	patches.suse/1203-drm-i915-Prevent-potential-null-ptr-deref-in-engine_.patch
 	patches.suse/1204-drm-i915-mtl-Don-t-set-PIPE_CONTROL_FLUSH_L3.patch
+	patches.suse/1205-drm-mediatek-dsi-Add-dsi-cmdq_ctl-to-send-panel-init.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
