drm/mediatek: Add mt8188 dsi compatible to mtk_dsi.c (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14214,6 +14214,7 @@
 	patches.suse/1203-drm-i915-Prevent-potential-null-ptr-deref-in-engine_.patch
 	patches.suse/1204-drm-i915-mtl-Don-t-set-PIPE_CONTROL_FLUSH_L3.patch
 	patches.suse/1205-drm-mediatek-dsi-Add-dsi-cmdq_ctl-to-send-panel-init.patch
+	patches.suse/1206-drm-mediatek-Add-mt8188-dsi-compatible-to-mtk_dsi.c.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
