drm/mediatek: dp: Add the audio packet flag to mtk_dp_data struct (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14216,6 +14216,7 @@
 	patches.suse/1205-drm-mediatek-dsi-Add-dsi-cmdq_ctl-to-send-panel-init.patch
 	patches.suse/1206-drm-mediatek-Add-mt8188-dsi-compatible-to-mtk_dsi.c.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
+	patches.suse/1208-drm-mediatek-dp-Add-the-audio-packet-flag-to-mtk_dp_.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
 	patches.suse/drm-mediatek-Add-mmsys_dev_num-to-mt8188-vdosys0-dri.patch
