--- a/series.conf
+++ b/series.conf
@@ -14217,6 +14217,7 @@
 	patches.suse/1206-drm-mediatek-Add-mt8188-dsi-compatible-to-mtk_dsi.c.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
 	patches.suse/1208-drm-mediatek-dp-Add-the-audio-packet-flag-to-mtk_dp_.patch
+	patches.suse/1209-drm-mediatek-dp-Add-the-audio-divider-to-mtk_dp_data.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
 	patches.suse/drm-mediatek-Add-mmsys_dev_num-to-mt8188-vdosys0-dri.patch
