drm/mediatek: dsi: Add mode_valid callback to DSI bridge (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14221,6 +14221,7 @@
 	patches.suse/1210-drm-mediatek-dp-Add-support-MT8188-dp-edp-function.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback.patch
 	patches.suse/drm-mediatek-dp-fix-memory-leak-on-get_edid-callback-fcaf976.patch
+	patches.suse/1213-drm-mediatek-dsi-Add-mode_valid-callback-to-DSI-brid.patch
 	patches.suse/drm-mediatek-Add-mmsys_dev_num-to-mt8188-vdosys0-dri.patch
 	patches.suse/drm-mediatek-Add-crtc-path-enum-for-all_drm_priv-arr.patch
 	patches.suse/drm-mediatek-Fix-using-wrong-drm-private-data-to-bin.patch
