drm/mediatek: Add encoder_index interface for mtk_ddp_comp_funcs (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14225,6 +14225,7 @@
 	patches.suse/drm-mediatek-Add-mmsys_dev_num-to-mt8188-vdosys0-dri.patch
 	patches.suse/drm-mediatek-Add-crtc-path-enum-for-all_drm_priv-arr.patch
 	patches.suse/drm-mediatek-Fix-using-wrong-drm-private-data-to-bin.patch
+	patches.suse/1217-drm-mediatek-Add-encoder_index-interface-for-mtk_ddp.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-by-swapping-FBs-after-u.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-during-crtc-enabling.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
