--- a/series.conf
+++ b/series.conf
@@ -14226,6 +14226,7 @@
 	patches.suse/drm-mediatek-Add-crtc-path-enum-for-all_drm_priv-arr.patch
 	patches.suse/drm-mediatek-Fix-using-wrong-drm-private-data-to-bin.patch
 	patches.suse/1217-drm-mediatek-Add-encoder_index-interface-for-mtk_ddp.patch
+	patches.suse/1218-drm-mediatek-Add-connector-dynamic-selection-capabil.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-by-swapping-FBs-after-u.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-during-crtc-enabling.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
