--- a/series.conf
+++ b/series.conf
@@ -14229,6 +14229,7 @@
 	patches.suse/1218-drm-mediatek-Add-connector-dynamic-selection-capabil.patch
 	patches.suse/1219-drm-mediatek-dpi-Support-dynamic-connector-selection.patch
 	patches.suse/1220-drm-mediatek-dsi-Support-dynamic-connector-selection.patch
+	patches.suse/1221-drm-mediatek-Support-dynamic-selection-of-MT8188-VDO.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-by-swapping-FBs-after-u.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-during-crtc-enabling.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
