--- a/series.conf
+++ b/series.conf
@@ -14233,6 +14233,7 @@
 	patches.suse/drm-mediatek-Fix-iommu-fault-by-swapping-FBs-after-u.patch
 	patches.suse/drm-mediatek-Fix-iommu-fault-during-crtc-enabling.patch
 	patches.suse/1224-drm-mediatek-gamma-Adjust-mtk_drm_gamma_set_common-p.patch
+	patches.suse/1225-drm-mediatek-gamma-Reduce-indentation-in-mtk_gamma_s.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
