drm/mediatek: gamma: Improve and simplify HW LUT calculation (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14235,6 +14235,7 @@
 	patches.suse/1224-drm-mediatek-gamma-Adjust-mtk_drm_gamma_set_common-p.patch
 	patches.suse/1225-drm-mediatek-gamma-Reduce-indentation-in-mtk_gamma_s.patch
 	patches.suse/1226-drm-mediatek-gamma-Support-SoC-specific-LUT-size.patch
+	patches.suse/1227-drm-mediatek-gamma-Improve-and-simplify-HW-LUT-calcu.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
