drm/mediatek: aal: Use bitfield macros (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14238,6 +14238,7 @@
 	patches.suse/1227-drm-mediatek-gamma-Improve-and-simplify-HW-LUT-calcu.patch
 	patches.suse/1228-drm-mediatek-gamma-Enable-the-Gamma-LUT-table-only-a.patch
 	patches.suse/1229-drm-mediatek-gamma-Use-bitfield-macros.patch
+	patches.suse/1230-drm-mediatek-aal-Use-bitfield-macros.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
