--- a/series.conf
+++ b/series.conf
@@ -14239,6 +14239,7 @@
 	patches.suse/1228-drm-mediatek-gamma-Enable-the-Gamma-LUT-table-only-a.patch
 	patches.suse/1229-drm-mediatek-gamma-Use-bitfield-macros.patch
 	patches.suse/1230-drm-mediatek-aal-Use-bitfield-macros.patch
+	patches.suse/1231-drm-mediatek-De-commonize-disp_aal-disp_gamma-gamma_.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
