--- a/series.conf
+++ b/series.conf
@@ -14242,6 +14242,7 @@
 	patches.suse/1231-drm-mediatek-De-commonize-disp_aal-disp_gamma-gamma_.patch
 	patches.suse/1232-drm-mediatek-gamma-Support-multi-bank-gamma-LUT.patch
 	patches.suse/1233-drm-mediatek-gamma-Add-support-for-12-bit-LUT.patch
+	patches.suse/1234-drm-mediatek-gamma-Add-support-for-MT8195.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
