drm/mediatek: aal: Add kerneldoc for struct mtk_disp_aal (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14245,6 +14245,7 @@
 	patches.suse/1234-drm-mediatek-gamma-Add-support-for-MT8195.patch
 	patches.suse/1235-drm-mediatek-gamma-Make-sure-relay-mode-is-disabled.patch
 	patches.suse/1236-drm-mediatek-gamma-Program-gamma-LUT-type-for-descen.patch
+	patches.suse/1237-drm-mediatek-aal-Add-kerneldoc-for-struct-mtk_disp_a.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
