--- a/series.conf
+++ b/series.conf
@@ -14247,6 +14247,7 @@
 	patches.suse/1236-drm-mediatek-gamma-Program-gamma-LUT-type-for-descen.patch
 	patches.suse/1237-drm-mediatek-aal-Add-kerneldoc-for-struct-mtk_disp_a.patch
 	patches.suse/1238-drm-mediatek-gamma-Add-kerneldoc-for-struct-mtk_disp.patch
+	patches.suse/1239-drm-mediatek-aal-Compress-of_device_id-entries-and-a.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
