drm/msm/dpu: remove irq_idx argument from IRQ callbacks (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14249,6 +14249,7 @@
 	patches.suse/1238-drm-mediatek-gamma-Add-kerneldoc-for-struct-mtk_disp.patch
 	patches.suse/1239-drm-mediatek-aal-Compress-of_device_id-entries-and-a.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
+	patches.suse/1241-drm-msm-dpu-remove-irq_idx-argument-from-IRQ-callbac.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
