--- a/series.conf
+++ b/series.conf
@@ -14250,6 +14250,7 @@
 	patches.suse/1239-drm-mediatek-aal-Compress-of_device_id-entries-and-a.patch
 	patches.suse/drm-mediatek-mtk_dsi-Fix-NO_EOT_PACKET-settings-hand.patch
 	patches.suse/1241-drm-msm-dpu-remove-irq_idx-argument-from-IRQ-callbac.patch
+	patches.suse/1242-drm-msm-dpu-extract-dpu_core_irq_is_valid-helper.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
