--- a/series.conf
+++ b/series.conf
@@ -14257,6 +14257,7 @@
 	patches.suse/1246-drm-msm-dpu-stop-using-raw-IRQ-indices-in-the-kernel.patch
 	patches.suse/1247-drm-msm-dpu-shift-IRQ-indices-by-1.patch
 	patches.suse/1248-drm-msm-Remove-unnecessary-NULL-values.patch
+	patches.suse/1249-drm-msm-dpu-Move-setting-of-dpu_enc-wide_bus_en-to-a.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
