drm/msm/dp: Use drm_dp_read_sink_count() helper (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14262,6 +14262,7 @@
 	patches.suse/1251-drm-msm-dsi-Add-DATABUS_WIDEN-MDP_CTRL2-bit.patch
 	patches.suse/1252-drm-msm-dsi-Enable-widebus-for-DSI.patch
 	patches.suse/1253-drm-msm-dp-Replace-open-coded-drm_dp_read_dpcd_caps.patch
+	patches.suse/1254-drm-msm-dp-Use-drm_dp_read_sink_count-helper.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
