--- a/series.conf
+++ b/series.conf
@@ -14263,6 +14263,7 @@
 	patches.suse/1252-drm-msm-dsi-Enable-widebus-for-DSI.patch
 	patches.suse/1253-drm-msm-dp-Replace-open-coded-drm_dp_read_dpcd_caps.patch
 	patches.suse/1254-drm-msm-dp-Use-drm_dp_read_sink_count-helper.patch
+	patches.suse/1255-drm-msm-dp-Remove-dead-code-related-to-downstream-ca.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
