drm/msm/dp: Simplify with drm_dp_{max_link_rate, max_lane_count}() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14265,6 +14265,7 @@
 	patches.suse/1254-drm-msm-dp-Use-drm_dp_read_sink_count-helper.patch
 	patches.suse/1255-drm-msm-dp-Remove-dead-code-related-to-downstream-ca.patch
 	patches.suse/1256-drm-msm-dp-Remove-aux_cfg_update_done-and-related-co.patch
+	patches.suse/1257-drm-msm-dp-Simplify-with-drm_dp_-max_link_rate-max_l.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
