drm/msm/dp: Remove dp_display_is_ds_bridge() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14267,6 +14267,7 @@
 	patches.suse/1256-drm-msm-dp-Remove-aux_cfg_update_done-and-related-co.patch
 	patches.suse/1257-drm-msm-dp-Simplify-with-drm_dp_-max_link_rate-max_l.patch
 	patches.suse/1258-drm-msm-dp-Inline-dp_link_parse_sink_count.patch
+	patches.suse/1259-drm-msm-dp-Remove-dp_display_is_ds_bridge.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
