--- a/series.conf
+++ b/series.conf
@@ -14270,6 +14270,7 @@
 	patches.suse/1259-drm-msm-dp-Remove-dp_display_is_ds_bridge.patch
 	patches.suse/drm-msm-dp-skip-validity-check-for-DP-CTS-EDID-check.patch
 	patches.suse/1261-drm-msm-dpu-inline-_setup_pingpong_ops.patch
+	patches.suse/1262-drm-msm-dpu-enable-PINGPONG-TE-operations-only-when-.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
