--- a/series.conf
+++ b/series.conf
@@ -14272,6 +14272,7 @@
 	patches.suse/1261-drm-msm-dpu-inline-_setup_pingpong_ops.patch
 	patches.suse/1262-drm-msm-dpu-enable-PINGPONG-TE-operations-only-when-.patch
 	patches.suse/1263-drm-msm-dpu-drop-the-DPU_PINGPONG_TE-flag.patch
+	patches.suse/1264-drm-msm-dpu-inline-_setup_intf_ops.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
