drm/msm/dpu: drop DPU_INTF_TE feature flag (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14274,6 +14274,7 @@
 	patches.suse/1263-drm-msm-dpu-drop-the-DPU_PINGPONG_TE-flag.patch
 	patches.suse/1264-drm-msm-dpu-inline-_setup_intf_ops.patch
 	patches.suse/1265-drm-msm-dpu-enable-INTF-TE-operations-only-when-supp.patch
+	patches.suse/1266-drm-msm-dpu-drop-DPU_INTF_TE-feature-flag.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
