--- a/series.conf
+++ b/series.conf
@@ -14277,6 +14277,7 @@
 	patches.suse/1266-drm-msm-dpu-drop-DPU_INTF_TE-feature-flag.patch
 	patches.suse/1267-drm-msm-dpu-drop-useless-check-from-dpu_encoder_phys.patch
 	patches.suse/1268-drm-msm-dpu-move-INTF-tearing-checks-to-dpu_encoder_.patch
+	patches.suse/1269-drm-msm-dp-Inline-dp_display_is_sink_count_zero.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
