--- a/series.conf
+++ b/series.conf
@@ -14280,6 +14280,7 @@
 	patches.suse/1269-drm-msm-dp-Inline-dp_display_is_sink_count_zero.patch
 	patches.suse/1270-drm-msm-dp-Remove-error-message-when-downstream-port.patch
 	patches.suse/1271-drm-msm-dp-support-setting-the-DP-subconnector-type.patch
+	patches.suse/1272-drm-msm-a6xx-Add-missing-regs-for-A7XX.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
