drm/msm/a6xx: Add skeleton A7xx support (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14281,6 +14281,7 @@
 	patches.suse/1270-drm-msm-dp-Remove-error-message-when-downstream-port.patch
 	patches.suse/1271-drm-msm-dp-support-setting-the-DP-subconnector-type.patch
 	patches.suse/1272-drm-msm-a6xx-Add-missing-regs-for-A7XX.patch
+	patches.suse/1273-drm-msm-a6xx-Add-skeleton-A7xx-support.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
