--- a/series.conf
+++ b/series.conf
@@ -14282,6 +14282,7 @@
 	patches.suse/1271-drm-msm-dp-support-setting-the-DP-subconnector-type.patch
 	patches.suse/1272-drm-msm-a6xx-Add-missing-regs-for-A7XX.patch
 	patches.suse/1273-drm-msm-a6xx-Add-skeleton-A7xx-support.patch
+	patches.suse/1274-drm-msm-a6xx-Send-ACD-state-to-QMP-at-GMU-resume.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
