--- a/series.conf
+++ b/series.conf
@@ -14284,6 +14284,7 @@
 	patches.suse/1273-drm-msm-a6xx-Add-skeleton-A7xx-support.patch
 	patches.suse/1274-drm-msm-a6xx-Send-ACD-state-to-QMP-at-GMU-resume.patch
 	patches.suse/1275-drm-msm-a6xx-Mostly-implement-A7xx-gpu_state.patch
+	patches.suse/1276-drm-msm-a6xx-Add-A730-support.patch
 	patches.suse/drm-msm-adreno-Fix-SM6375-GPU-ID.patch
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
