--- a/series.conf
+++ b/series.conf
@@ -14291,6 +14291,7 @@
 	patches.suse/drm-msm-a6xx-Fix-unknown-speedbin-case.patch
 	patches.suse/1281-drm-msm-adreno-Add-ZAP-firmware-name-to-A635.patch
 	patches.suse/1282-drm-msm-adreno-Add-A635-speedbin-0xac-A643.patch
+	patches.suse/1283-drm-msm-allow-passing-struct-msm_kms-to-msm_drv_prob.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
