--- a/series.conf
+++ b/series.conf
@@ -14296,6 +14296,7 @@
 	patches.suse/1285-drm-msm-mdp4-move-resource-allocation-to-the-_probe-.patch
 	patches.suse/1286-drm-msm-mdp5-move-resource-allocation-to-the-_probe-.patch
 	patches.suse/1287-drm-msm-dsi-switch-to-devm_drm_bridge_add.patch
+	patches.suse/1288-drm-msm-hdmi-switch-to-devm_drm_bridge_add.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
